--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -151,6 +151,7 @@
 <script>
 
     $(document).ready(function () {
+         $("#prt").hide();
         $("#btnActivityCreCreate").prop('disabled', true);
 
         var id = $("#activityrid").val().trim();
