--- a/ProAcc/Views/Assessment/ReadinessReport.cshtml
+++ b/ProAcc/Views/Assessment/ReadinessReport.cshtml
@@ -51,14 +51,14 @@
 			</div>
 
 		</div>
-		@*<div class="row">*@
-			<div class="col-6">
+		
+			@*<div class="col-6">
 				<a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
 			</div>
 			<div class="col-6">
 				<a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
-			</div>
-		@*</div>*@
+			</div>*@
+		
 		<a class="toast-title">Readiness Report</a>
 		<hr />
 		<div class="col-lg-12 ">
