--- a/ProAcc/Views/CustomerQuestionnaire/SendMailToCustomer.cshtml
+++ b/ProAcc/Views/CustomerQuestionnaire/SendMailToCustomer.cshtml
@@ -42,7 +42,20 @@
 
 <script>
     $(document).ready(function () {
-       
+
+        $("#ToName").keypress(function (event) {
+            var inputValue = event.which;
+            if (!(inputValue >= 65 && inputValue <= 122) && (inputValue != 32 && inputValue != 0)) {
+                event.preventDefault();
+            }            
+        });
+
+        $("#ToEmail,#ToName").keypress(function (event) {
+            if (event.which === 44) {
+                event.preventDefault();
+            }
+        });
+
         $("#btnsendMailCreate").on("click", function () {
             var Name = $("#ToName").val();
              Name = Name.replace(/,/g, " ");
