--- a/ProAcc/Views/Customers/Create.cshtml
+++ b/ProAcc/Views/Customers/Create.cshtml
@@ -120,7 +120,7 @@
 <script>
 
     $(document).ready(function () {
-
+     $("#prt").hide();
         $("#txtCompanyName").keypress(function (event) {
             var inputValue = event.which;
             // allow letters and whitespaces only.
