--- a/ProAcc/Views/Customers/GetCustomerById.cshtml
+++ b/ProAcc/Views/Customers/GetCustomerById.cshtml
@@ -115,7 +115,7 @@
 <script>
 
     $(document).ready(function () {
-
+     $("#prt").hide();
 
         $("#txtIndustrySector").keypress(function (event) {
             var inputValue = event.which;
