--- a/ProAcc/Views/Home/Home.cshtml
+++ b/ProAcc/Views/Home/Home.cshtml
@@ -411,14 +411,14 @@ background-attachment:local, local, scroll, scroll;
 
 
         <div class="col-lg-12 card" style="margin-bottom:10px !important;">
-            <div class="row">
+            @*<div class="row">
                 <div class="col-6">
                     <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
                 </div>
                 <div class="col-6">
                     <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
                 </div>
-            </div>
+            </div>*@
             <div class="row " style="margin-top: 20px;">
                 <div class="col-md-6 col-xl-4">
                     <div class="card mb-3 widget-content bg-pink" style="background-color: #E91E63 !important;">
