--- a/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceCreate.cshtml
@@ -58,6 +58,8 @@
 <script>
 
     $(document).ready(function () {
+         $("#prt").hide();
+         
         $("#btnInstanceCreate").prop('disabled', true);
 
         $("#txtInstanceName").keypress(function (event) {
