--- a/ProAcc/Views/IssueTrack/Create.cshtml
+++ b/ProAcc/Views/IssueTrack/Create.cshtml
@@ -145,6 +145,7 @@
 <script>
     $(document).ready(function () {
         //debugger
+         $("#prt").hide();
         $("#btnIssueCreate").prop("disabled", true);
             $("#IDInstance").prop("disabled", true);
         $('#SubmitInstance').prop("disabled", true);
