--- a/ProAcc/Views/IssueTrack/GetIssueTrackById.cshtml
+++ b/ProAcc/Views/IssueTrack/GetIssueTrackById.cshtml
@@ -157,7 +157,7 @@
 <script>
     $(document).ready(function () {
          $("#tblIssueComments").dataTable();
-
+    $("#prt").hide();
         var status = $("#IDstatus").val();
         $("#ddllist option[value='"+status+"']").attr('selected', 'selected');
             @*var id = $("#IDInstance").val();
