--- a/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskCreate.cshtml
@@ -59,6 +59,7 @@
 <script>
 
     $(document).ready(function () {
+         $("#prt").hide();
         $("#btnCreate").prop('disabled', true);
 
         $("#txtTaskName").keypress(function (event) {
