--- a/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationCreate.cshtml
@@ -115,6 +115,7 @@
 <script>
 
     $(document).ready(function () {
+         $("#prt").hide();
         $("#btnProjectCreate").prop('disabled', true);
 
         var projectName = $("#txtProjectName").val().trim();
