--- a/ProAcc/Views/Report/AuditReports.cshtml
+++ b/ProAcc/Views/Report/AuditReports.cshtml
@@ -61,7 +61,7 @@
 <script type="text/javascript">
 
     $(document).ready(function () {
-       
+        $("#prt").hide();
         function ddMonyy(Date) {
             const date = Date;
             const formattedDate = date.toLocaleDateString('en-GB', {
