--- a/ProAcc/Views/Role/Create.cshtml
+++ b/ProAcc/Views/Role/Create.cshtml
@@ -42,7 +42,7 @@
 <script>
      $(document).ready(function () {
          loadRole()
-
+     $("#prt").hide();
      })
     $("#txtRoleName").keypress(function (event) {
         var inputValue = event.which;
