--- a/ProAcc/Views/User/Edit.cshtml
+++ b/ProAcc/Views/User/Edit.cshtml
@@ -193,6 +193,7 @@
 
 <script>
     $(document).ready(function () {
+         $("#prt").hide();
         var Id = $("#UserTypeID").val();
          if (Id == 1||Id == 4||Id == 0) {
             $("#divRole").hide();
