--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -111,7 +111,7 @@
 
 <script>
     $(document).ready(function () {
-       
+        $("#prt").hide();
         $("#tblUserTable").dataTable({
            "order": [[1, 'desc']],
             //"ordering": false,
