--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -122,14 +122,14 @@
         </div>
     </div>
 </div>
-<div class="row">
+@*<div class="row">
     <div class="col-6">
         <a class="card-title" style="float: left;">Project Name :@Session["Project_Name"]</a>
     </div>
     <div class="col-6">
         <a class="card-title " style="float: right;">Instance Name : @Session["Instance_Name"]</a>
     </div>
-</div>
+</div>*@
 <div style="margin-left:20px;margin-top:20px">
     <table id="jqGrid"></table>
     <div id="jqGridPager"></div>
