--- a/ProAcc/Views/Resource/ResourceAllocation.cshtml
+++ b/ProAcc/Views/Resource/ResourceAllocation.cshtml
@@ -18,6 +18,11 @@
         height: auto;
         vertical-align: text-top;
     }
+    .ui-jqdialog{ 
+        top:120px !important;
+        left:500px !important;        
+   }
+    
 </style>
 <div>
     <table id="jqGrid"></table>
@@ -207,8 +212,8 @@
             menubar: false,
             viewrecords: true,
             hoverrows: true,
-             height: 'auto',
-            //height: 400,
+            // height: 'auto',
+            height: 400,
             rowNum: 1000,
             caption: '',
             sortable: false,
