Added Views from RDC

--- a/ProAcc/Views/InstanceCreation/Create.cshtml
+++ b/ProAcc/Views/InstanceCreation/Create.cshtml
@@ -6,7 +6,7 @@
 
 
 @Html.Partial("_InstanceCreate")
-<div id="divInstanceCreation">
+<div id="divInstanceCreation" style="max-width:99.5%;">
 
 </div>
 
