--- a/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
+++ b/ProAcc/Views/InstanceCreation/_InstanceIndex.cshtml
@@ -5,7 +5,7 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
-
+<div style="max-width:95%; padding-left:10%;">
 <table class="table" id="tblInstanceCreation">
     <thead>
         <tr>
@@ -39,7 +39,7 @@
     </tbody>
 </table>
 
-
+</div>
 <script type="text/javascript">
 
 
