--- a/ProAcc/Views/ProjectCreation/Create.cshtml
+++ b/ProAcc/Views/ProjectCreation/Create.cshtml
@@ -13,7 +13,7 @@
 
 @Html.Partial("_ProjectCreationCreate")
 @*@Html.Partial("_ProjectCreationIndex")*@
-<div id="divProjectCreation">
+<div id="divProjectCreation" style="max-width: 99.5%;">
 
 </div>
 
