--- a/ProAcc/Views/ProjectCreation/_PMTaskIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_PMTaskIndex.cshtml
@@ -13,7 +13,7 @@
         overflow-x: scroll;
     }
 </style>
-<table class="table" id="tblProjectCreation">
+<table class="table" id="tblProjectCreation" style="max-width: 99%";>
     <thead>
         <tr>
             <th>Category</th>
