--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -12,7 +12,7 @@
         overflow-x: scroll;
     }
 </style>
-<table class="table" id="tblProjectCreation">
+<table class="table" id="tblProjectCreation" style="max-width: 99%";>
     <thead>
         <tr>
             <th>Project Name</th>
