--- a/ProAcc/Views/Role/_RoleIndex.cshtml
+++ b/ProAcc/Views/Role/_RoleIndex.cshtml
@@ -7,7 +7,7 @@
 <link href="~/Asset/Scripts/Datatable/css/dataTables.bootstrap4.min.css" rel="stylesheet" />
 <script src="~/Asset/Scripts/Datatable/jquery.dataTables.min.js"></script>
 <script src="~/Asset/Scripts/Datatable/dataTables.bootstrap4.min.js"></script>
-<div style="max-width:99.5%;">
+<div style="max-width:85%; padding-left:12%;">
     <table class="table" id="tblRoleCreation">
         <thead>
             <tr>
