--- a/ProAcc/Views/ProjectMonitor/PMUPload.cshtml
+++ b/ProAcc/Views/ProjectMonitor/PMUPload.cshtml
@@ -9,31 +9,32 @@
             Html.RenderAction("InstanceSelection", "ProjectMonitor");
         }
 
-        <div class="row">
-            <div class="col-md-4">
-                <div class="position-relative form-group">
-                    <label for="exampleEmail" class="">File type</label>
-                    @Html.DropDownList("Filetype", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "File"),
-              "Select Instance", new { id = "drpFiletype", @class = "form-control" })
-
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-md-4"></label>
-                <div class="col-md-10">
-                    <input type="file" class="mb-2 mr-2 btn btn-info" name="files" id="FileUpload1" accept="application/pdf" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-md-4"></label>
-                <div class="col-md-10">
-                    <div class="text-center">
-                        <button class="btn-wide mb-2 mr-2 btn btn-primary" id="btnUpload">
-                            Upload
-                        </button>
+         <div class="row">
+                <div class="col-md-4">
+                    <div class="position-relative form-group">
+                        <label for="exampleEmail" class="">File Upload</label>
+                        @Html.DropDownList("Filetype", new SelectList(Enumerable.Empty<SelectListItem>(), "Id", "File"),
+                        "Select", new { id = "drpFiletype", @class = "form-control" })
                     </div>
                 </div>
-            </div>
+                <div class="col-md-4">
+                    <div class="position-relative form-group">
+                        <label for="exampleEmail" class="">.</label><br />
+                        <input type="file" class="mb-2 mr-2 btn btn-info" name="files" id="FileUpload1" accept="application/pdf" />
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="position-relative form-group">
+                        <label for="exampleEmail" class="">.</label><br />
+                        
+                            <button class="btn-wide mb-2 mr-2 btn btn-primary" id="btnUpload">
+                                Upload
+                            </button>
+                      
+
+                    </div>
+
+                </div>
         </div>
 
     </div>
@@ -136,7 +137,7 @@
                     select.empty();
                     select.append($('<option/>', {
                         value: 0,
-                        text: "Select a File Type"
+                        text: "--Select--"
                     }));
                     $.each(data, function (index, itemData) {
                         select.append($('<option/>', {
