--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -11,7 +11,8 @@
 
 <a class="card-title">User List</a>
 <hr />
-<table class="table" id="tblUserTable" style="max-width: 99.5%;">
+<div style="max-width: 99.5%;">
+<table class="table" id="tblUserTable">
     <thead>
         <tr>
             <th>
@@ -108,7 +109,7 @@
         }
     </tbody>
 </table>
-
+</div>
 <script>
     $(document).ready(function () {
         $("#prt").hide();
